--- a/Kobu_prototype/app/src/main/res/values/strings.xml
+++ b/Kobu_prototype/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Kobu_prototype</string>
+	<string name="app_name">Kobu_prototype</string>
+	<string name="start_search">start_search</string>
 </resources>
